# deepseek-writer

./: README.md  cli.py  config.py  deepseek-writer.sh  dswriter-web.sh  dswriter.sh  main.py  orchestrator.py  project.py  pyproject.toml  requirements.txt  setup.py  templates.py  webui.py
agents/: base.py  character.py  condenser.py  editor.py  outline.py  writer.py
llm/: client.py  models.py
prompts/: character.py  condenser.py  editor.py  outline.py  writer.py
utils/: audio.py  continuity.py  display.py  exporter.py  file_manager.py  foreshadowing.py  log.py  memory.py  search.py  style_guide.py
